# lab04

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: example.cpp
include/: print.hpp
sources/: print.cpp
